fix an issue where scrollbars would appear/disappear as the spinner rotated

--- a/src/calendar/Body.scss
+++ b/src/calendar/Body.scss
@@ -27,10 +27,9 @@
 	.calendar-body-loading {
 		margin: auto;
 		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 
 	.calendar-day {
